2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ReadPkg.py: attempt to os.remove(directory) failed
	* src/GrampsDb/_GrampsDbFactories.py: import from gen.db

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Remove unnecessary code.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/plugins/FtmStyleAncestors.py
	* src/plugins/DesGraph.py
	* src/plugins/Ancestors.py
	* src/plugins/IndivSummary.py
	* src/plugins/FtmStyleDescendants.py:
	Delete reports that have been unsupported for > 1 year.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/docgen/PdfDoc.py: Fix application launch.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Add generic Graphviz options.
	* src/ReportBase/_BareReportDialog.py: Allow dialogs to add options.

2007-12-15  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_MenuOptions.py: Fix TextOption and EnumeratedListOption.

2007-12-15 Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayTabs/_ChildModel.py:
	* src/Editors/_EditFamily.py: add fallback for birth date (feature #1448)

2007-12-15 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditFamily.py: emit family-update signal (bug #1416)

2007-12-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: Added relationships (feature #1086)
	* src/PluginUtils/_MenuOptions.py: added get_center_person to filter option

2007-12-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/WebCal.py: Temp fixes to keep running (bug #1441)

2007-12-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_RelationView.py: Made suggestion by Stian:
	http://www.gramps-project.org/wiki/index.php?title=GEPS_002:_RelationView_Expand_and_Collapse#User_Contributions
	and addressed feature request #1404

2007-12-14 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditEvent.py: first attribute tab THEN backref